--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
@@ -25,6 +27,7 @@
     "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.0.0",
     "@types/pino": "^7.0.4",
